# django-games

./: .editorconfig  LICENSE  README.md  bumpversion.cfg  docker-compose.yaml  pyproject.toml
provision/app/: Dockerfile
scripts/: compile_image.sh  prepare-commit-message.sh
src/core/: settings.py  urls.py  wsgi.py
