[tool.poetry]
name = "db_vgames"
version = "1.0.0"
description = "Package for my games database client"
authors = ["Cristhian Bravo <green2cerberuz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "=3.1.7"
python-dotenv = "=0.15.0"
psycopg2 = "^2.8.4"
requests = "=2.24.0"
environs = "7.3.1"
dj-database-url = "0.5.0"

[tool.poetry.dev-dependencies]
pytest = "=6.1.2"
pytest-cov = "=^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"
